--- a/user-management-service.yml
+++ b/user-management-service.yml
@@ -1,1 +1,28 @@
 message: This is the user-management-service
+
+spring:
+  application:
+    name: user-management-service
+  config:
+    import: http://localhost:8888/
+  datasource:
+    url: jdbc:mysql://localhost:3306/userapi
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: password
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+app:
+  client:
+    url: http://localhost:4200/*
+
+debug: true
+
+server:
+  port: 8080
